# Tairaria

./: .gitignore  VISION.md  pyproject.toml  terraria-ui-reader-spec.md
.planning/: hud-control-panel-plan.md
scripts/: first_run.py
src/terraria_agent/: __main__.py  geometry.py
src/terraria_agent/brain/: planner.py
src/terraria_agent/cerebellum/: damage_detector.py  detector.py  digit_matcher.py  screen_capture.py  terra_blind_client.py  ui_reader.py  vision.py
src/terraria_agent/hand/: __init__.py  controller.py  default_keymap.json  hotbar_organizer.py  key_state.py  keymap.py
src/terraria_agent/hud/: app.py  state_bridge.py
src/terraria_agent/hud/panels/: brain.py  command.py  hand.py  log.py  spinal_cord.py  status.py
src/terraria_agent/models/: __init__.py  actions.py  game_state.py  task_queue.py
src/terraria_agent/orchestrator/: agent_loop.py
src/terraria_agent/spinal_cord/: context.py
src/terraria_agent/spinal_cord/actions/: __init__.py  combat.py  crafting.py  interaction.py  movement.py  (+1 more)
tests/: conftest.py
tests/test_actions/: test_combat.py  test_interaction.py  test_movement.py
tests/test_bt/: test_bt_trace.py  test_composites.py  test_core.py  test_decorators.py
tests/test_cerebellum/: test_damage_detector.py  test_ui_reader.py  test_vision.py
tests/test_conditions/: test_combat.py  test_environment.py  test_health.py
tests/test_hand/: test_controller.py  test_hotbar_organizer.py  test_key_state.py  test_keymap.py
tests/test_hud/: test_orchestrator.py  test_state_bridge.py
tests/test_trees/: test_root_integration.py
(+15 files in other folders)
