[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraria-agent"
version = "0.1.0"
description = "Pure vision-driven Terraria AI agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/terraria_agent"]
